--- a/views/dashboard/loanrequest.html
+++ b/views/dashboard/loanrequest.html
@@ -20,18 +20,26 @@
 		</div>
 		<p class="text-center" style="font-size:20px;margin-top:30px;color:red;" ng-if="loanrequestExist">Already your request pending</p>
 		<p class="text-center" style="font-size:20px;margin-top:30px;color:red;" ng-if="loanExist">Already you have active loan</p>
-		<div class="jumbotron" ng-if="!loanrequestExist && !loanExist">
+		<div class="jumbotron" ng-if="user.isAdmin || (!loanrequestExist && !loanExist)">
 			<div class="container">
 				<form name="expense_form" role="form" class="bottom-75" ng-submit="newloadRequest()" novalidate="">
 					<div class="table-form">
 						<div class="form-groups">
+							<div class="form-group" ng-if="user.isAdmin">
+								<label>Loan For</label>
+								<select required class="form-control input-lg" ng-model="loanrequest.req_by">
+									<option value="">Select user</option>
+									<option ng-repeat="us in users" value="{{us.id}}">{{us.name}}-{{us.phone}}</option>
+								</select>
+							</div>
 							<div class="form-group"> 	 
 								<label>Reason For Your Request</label>
 								<textarea required ng-model="loanrequest.reason" class="form-control input-lg" id=""></textarea>
 							</div>
 							<div class="form-group">
 								<label>Request Amount</label>
-								<input max="{{eligilityAmount}}" type="number" required ng-model="loanrequest.amount" class="form-control input-lg" id="">
+								<input ng-if="!user.isAdmin" max="{{eligilityAmount}}" type="number" required ng-model="loanrequest.amount" class="form-control input-lg" id="">
+								<input ng-if="user.isAdmin" type="number" required ng-model="loanrequest.amount" class="form-control input-lg" id="">
 							</div>
 							<input ng-disabled="expense_form.$invalid" type="submit" class="btn btn-primary" value="sumbit Request" name="">
 						</div>
