--- a/views/dashboard/overview.html
+++ b/views/dashboard/overview.html
@@ -12,7 +12,7 @@
 		
 		<div class="fr">
 		<h2><small>WELCOME {{user.name}}!</small></h2>
-		<h1 class="commonheading">ISM Saving Group3</h1>
+		<h1 class="commonheading">ISM Saving Group</h1>
 		</div>
 		
 		<div class="text-center">
